# bofstd

./: .clang-format  CMakeLists.txt  Config.cmake.in  Dependencies.cmake  Dependencies.cmake.in  Dependencies.private.cmake  LICENSE  README.md  bofstd.pc.in  bofstdConfig.cmake  get_all_linked_libraries_of_a_target.cmake  tc.txt  update_rpath.cmake  vcpkg-configuration.json  vcpkg.json  vcpkg_android.cmake
lib/: CMakeLists.txt
lib/include/bofstd/: basic_loggerfactory.h  bof2d.h  bofasync.h  bofaudio.h  bofaudiostandard.h  bofavlnode.h  bofavltree.h  bofbasicloggerfactory.h  bofbinserializer.h  bofbit.h  bofbit.h.bak  bofbuffer.h  bofcallbackcollection.h  bofcircularbuffer.h  bofcomchannel.h  bofcommandlineparser.h  bofconio.h  bofcrypto.h  bofdaemonservice.h  bofdatetime.h  bofenum.h  boferr.h  bofflag.h  boffs.h  bofgetopt.h  bofgraph.h  bofguid.h  bofhttprequest.h  bofjsonparser.h  bofjsonwriter.h  boflist.h  boflogchannel_spdlog.h  boflogger.h  boflogsink_spdlog.h  bofmpmcqueue.h  bofnarytreekv.h  bofobserver.h  bofparameter.h  bofpath.h  bofperformance.h  (+40 more)
lib/src/: bof2d.cpp  bofasync.cpp  bofaudio.cpp  bofaudiostandard.cpp  bofbinserializer.cpp  bofbit.cpp  bofbuffer.cpp  bofcomchannel.cpp  bofcommandlineparser.cpp  bofconio.cpp  bofcrypto.cpp  bofdaemonservice.cpp  bofdatetime.cpp  boffs.cpp  bofgateway.cpp  bofgetopt.cpp  bofguid.cpp  bofhttprequest.cpp  bofjsonparser.cpp  bofjsonwriter.cpp  boflogchannel_spdlog.cpp  boflogger.cpp  boflogsink_spdlog.cpp  boflogsink_spdlog.h  bofobserver.cpp  bofparameter.cpp  bofpath.cpp  bofperformance.cpp  bofperiodic.cpp  bofpipe.cpp  bofprocess.cpp  bofrational.cpp  bofrawcircularbuffer.cpp  bofrpc.cpp  bofscriptlauncher.cpp  bofserviceendpoint.cpp  bofshell.cpp  bofsocket.cpp  bofsocket.cpp.bak  bofsocketchannel.cpp  (+29 more)
lib/third/AsyncMulticastDelegate/Examples/: main.cpp
lib/third/AsyncMulticastDelegate/include/asyncmulticastdelegate/: Allocator.h  Delegate.h  DelegateAsync.h  DelegateAsyncWait.h  DelegateInvoker.h  DelegateLib.h  DelegateMsg.h  DelegateOpt.h  DelegateRemoteInvoker.h  DelegateRemoteRecv.h  DelegateRemoteSend.h  DelegateSp.h  DelegateSpAsync.h  DelegateThread.h  DelegateTransport.h  LockGuard.h  MulticastDelegate.h  MulticastDelegateBase.h  MulticastDelegateSafe.h  Semaphore.h  SinglecastDelegate.h  ThreadMsg.h  bofmsgthread.h  xallocator.h
lib/third/AsyncMulticastDelegate/src/: Allocator.cpp  DelegateAsync.cpp  DelegateRemoteInvoker.cpp  LockGuard.cpp  MulticastDelegateBase.cpp  Semaphore.cpp  bofmsgthread.cpp  xallocator.cpp
lib/third/cpp-linenoise-master/: linenoise.hpp
lib/third/cpp-linenoise-master/example/: example.cpp
lib/third/czmq/: Makefile.in  dependencies.cmake
lib/third/czmq/cmake_repo/: project-debug.cmake.in  project-release.cmake.in
lib/third/czmq/cmake_repo/DESKTOP_WIN32/: openpgmConfig.cmake
lib/third/czmq/doc/: Makefile.in
lib/third/ixml/: CMakeLists.txt  dependencies.cmake  ixmlConfig.cmake
lib/third/ixml/inc/: ixml.h  ixmldebug.h
lib/third/ixml/src/: attr.c  document.c  element.c  ixml.c  ixmldebug.c  ixmlmembuf.c  ixmlparser.c  namedNodeMap.c  node.c  nodeList.c
lib/third/ixml/test/: CMakeLists.txt  test_document.c
lib/third/spdlog/: CMakeLists.txt
lib/third/vld/: vld.ini
lib/third/zeromq/cmake_repo/: zeromqConfig.cmake
oldies/: bofactor.h  (+65 more)
oldies/cpptest/: CMakeLists.txt  cpptestConfig.cmake  dependencies.cmake
oldies/cpptest/cmake_repo/: project-debug.cmake.in  project-release.cmake.in  project.cmake.in
oldies/cpptest/include/cpptest/: config.h  winconfig.h
oldies/cpptest/source/: suite.cpp  textoutput.cpp
oldies/libyuv/: CMakeLists.txt
oldies/libyuv/include/libyuv/: convert_argb.h  l
oldies/libyuv/source/: convert_argb.cc
oldies/zeromq/: CMakeLists.txt  dependencies.cmake
tests/: CMakeLists.txt
tests/data/: colorbar_in_raw_32b_194x259.raw  colorbar_jpg_with_no_ext  colorbar_rle_32b.tga  jsonparser.json  shell_script_1.bof  shell_script_1_lin.bof  shell_script_2.bof
tests/include/: gtestrunner.h  ut_crypto.h  ut_jsonparser.h  ut_jsonwriter.h  ut_mmap.h  ut_parser.h  ut_ramdb.h  ut_threading.h  ut_xmlwriter.h
tests/src/: main.cpp  main.cpp.bak  ut_2d.cpp  ut_api.cpp  ut_async.cpp  ut_asyncmulticastdelegate.cpp  ut_binserializer.cpp  ut_bit.cpp  ut_bofconio.cpp  ut_bofio.cpp  ut_bofstd.cpp  ut_boftimecode.cpp  ut_callbackcollection.cpp  ut_circularbuffer.cpp  ut_cmdlineparser.cpp  ut_comchannel.cpp  ut_conio.cpp  ut_crypto.cpp  ut_datetime.cpp  ut_enum.cpp  ut_fs.cpp  ut_graph.cpp  ut_guid.cpp  ut_ioserver.cpp  ut_jsonparserwriter.cpp  ut_logger.cpp  ut_mmap.cpp  ut_mpmcqueue.cpp  ut_narytreekv.cpp  ut_path.cpp  ut_pipe.cpp  ut_pot.cpp  ut_process.cpp  ut_queue.cpp  ut_ramdb.cpp  ut_rawcircularbuffer.cpp  ut_scopeguard.cpp  ut_scriptlauncher.cpp  ut_serviceendpoint.cpp  ut_shell.cpp  (+20 more)
third/czmq/: CMakeLists.txt  dependencies.cmake
third/czmq/cmake_repo/DESKTOP_WIN32/: czmqConfig.cmake
third/czmq/cmake_repo/MTPC_LINUX/: openpgm-debug.cmake  openpgm-release.cmake  openpgm.cmake  openpgmConfig.cmake
third/czmq/src/: libczmq.pc  platform.h  platform.h.in
unittest/: CMakeLists.txt
unittest/data/: colorbar_1920x1080p59_8bit_captured_by_sdk.422  jsonparser.json  xmlparser.xml  xmlvectorparser.xml
unittest/include/: gtestrunner.h  ut_circularbuffer.h  ut_cmdlineparser.h  ut_jsonwriter.h  ut_parser.h  ut_ramdb.h  ut_xmlparser.h  ut_xmlwriter.h
unittest/source/: main.cpp  main.cpp.bak  ut_2d.cpp  ut_async.cpp  ut_asyncmulticastdelegate.cpp  ut_bit.cpp  ut_bofconio.cpp  ut_bofio.cpp  ut_bofstd.cpp  ut_boftimecode.cpp  ut_callbackcollection.cpp  ut_cmdlineparser.cpp  ut_comchannel.cpp  ut_crypto.cpp  ut_enum.cpp  ut_fs.cpp  ut_guid.cpp  ut_ioserver.cpp  ut_jsonparserwriter.cpp  ut_logger.cpp  ut_mmap.cpp  ut_pipe.cpp  ut_pot.cpp  ut_queue.cpp  ut_rawcircularbuffer.cpp  ut_scriptlauncher.cpp  ut_socketchannelmanager.cpp  ut_socketcmdchannel.cpp  ut_socketos.cpp  ut_socketos.cpp.bak  ut_sockettcp.cpp  ut_socketudp.cpp  ut_statemachine.cpp  ut_string.cpp  ut_stringformatter.cpp  ut_system.cpp  ut_threading.cpp  ut_uart.cpp  ut_xmlparserwriter.cpp
(+220 files in other folders)
